yeah more stuff! time for test

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,18 @@
 {
-    "manifest_version": 3,
-    "name": "Inverse",
-    "version": "1.0",
-    "description": "Invert and modify page elements",
-    "permissions": ["scripting", "activeTab"],
-    "background": {
-        "service_worker": "background.js"
-    },
-    "action": {
-        "default_popup": "popup.html"
+  "manifest_version": 3,
+  "name": "Inverse",
+  "version": "0.1",
+  "description": "Lightweight extension to hide images.",
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "inverse.png",
+      "48": "inverse.png",
+      "128": "inverse.png"
     }
+  },
+  "permissions": ["activeTab", "scripting", "storage"]
 }
