amp says this fixes it

--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,10 @@
       "128": "inverse.png"
     }
   },
-  "permissions": ["activeTab", "scripting", "storage"]
+  "permissions": ["activeTab", "scripting", "storage"],
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content.js"],
+    "run_at": "document_end"
+  }]
 }
