--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Inverse",
-  "version": "0.1",
+  "version": "1.0",
   "description": "Lightweight extension to hide images.",
   "background": {
     "service_worker": "background.js"
@@ -14,7 +14,7 @@
       "128": "inverse.png"
     }
   },
-  "permissions": ["activeTab", "scripting", "storage"],
+  "permissions": ["activeTab", "scripting"],
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": ["content.js"],
